Implementation des fonctions thin et thinningstep + creation de la fonction copyimage

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 # Compiled class file
-Fingerprint.class
-Helper.class
-Helper$1.class
-Helper$2.class
-Main.class
-SignatureChecks.class
+
 # Log file
 *.log
-
+launch.json
 # BlueJ files
 *.ctxt
 
@@ -25,3 +20,7 @@ SignatureChecks.class
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#folders 
+.vscode
+/bin
