--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ launch.json
 *.zip
 *.tar.gz
 *.rar
+skeleton_1_1_small.png
+skeleton_1_1.png
+skeleton_1_2.png
+skeleton_2_1.png
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
